[package]
name = "my-project-backend"
version = "0.1.0"
authors = ["kmiura <ken.miura1102@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
actix-http = "2.2.0"
serde = "1.0.123"
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"