[package]
name = "my-project-backend"
version = "0.1.0"
authors = ["kmiura <ken.miura1102@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
actix-http = "2.2.0"
serde = "1.0.123"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
ring = "0.16.20"
actix-redis = "0.9.1"
actix-session = "0.4.0"
time = "0.2.26"
regex = "1.4.5"
lazy_static = "1.4.0"
log = "0.4.14"
log4rs = "1.0.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = "0.4.19"
lettre = "0.9"
lettre_email = "0.9"
