[workspace]

members = [
    "admin_account",
    "admin_service",
    "common",
    "delete_expired_consultation_reqs",
    "delete_expired_deleted_user_accounts",
    "delete_expired_temp_mfa_secrets",
    "delete_expired_pwd_change_reqs",
    "delete_expired_temp_accounts",
    "entity",
    "migration",
    "user_service",
]
