[package]
name = "admin_account"
version = "0.1.0"
authors = ["kmiura <ken.miura1102@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "chrono"] }
