[package]
name = "admin_account"
version = "0.1.0"
authors = ["kmiura <ken.miura1102@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
common = { path = "../common" }
dotenv = "0.15.0"
entity = { path = "../entity" }
tokio = { version = "1.28.2", features = ["full"] }
