[package]
name = "admin_service"
version = "0.1.0"
authors = ["kmiura <ken.miura1102@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-redis-session = "0.2.2"
async-session = "3.0.0"
axum = { version = "0.6.2", features = ["headers", "json", "multipart"] }
chrono = "0.4.22"
common = { path = "../common" }
dotenv = "0.15.0"
entity = { path = "../entity" }
headers = "0.3.8"
image = "0.24.4"
num_cpus = "1.13.1"
once_cell = "1.15.0"
opensearch = "2.0.0"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tower-cookies = { version = "0.8.0", features = ["axum-core", "signed"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
