[package]
name = "admin_service"
version = "0.1.0"
authors = ["kmiura <ken.miura1102@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-redis-session = "0.2.2"
async-session = "3.0.0"
axum = { version = "0.6.15", features = ["headers", "json", "multipart"] }
axum-extra = { version = "0.7.3", features = ["cookie", "cookie-signed"] }
chrono = "0.4.23"
common = { path = "../common" }
dotenv = "0.15.0"
entity = { path = "../entity" }
headers = "0.3.8"
image = "0.24.5"
num_cpus = "1.15.0"
once_cell = "1.17.0"
opensearch = "2.0.0"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
