[package]
name = "admin_service"
version = "0.1.0"
authors = ["kmiura <ken.miura1102@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fred-session = "0.1.4"
async-session = "3.0.0"
axum = { version = "0.6.19", features = ["headers", "json", "multipart"] }
axum-extra = { version = "0.7.5", features = ["cookie", "cookie-signed"] }
chrono = "0.4.26"
common = { path = "../common" }
dotenv = "0.15.0"
entity = { path = "../entity" }
image = "0.24.6"
num_cpus = "1.15.0"
once_cell = "1.18.0"
opensearch = "2.1.0"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
