[package]
name = "common"
version = "0.1.0"
authors = ["kmiura <ken.miura1102@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fred-session = "0.1.5"
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
aws-sdk-sesv2 = "0.28.0"
axum = { version = "0.6.19", features = ["macros"] }
axum-extra = { version = "0.7.5", features = ["cookie", "cookie-signed"] }
bcrypt = "0.15.0"
chrono = "0.4.26"
entity = { path = "../entity" }
once_cell = "1.18.0"
opensearch = "2.1.0"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
serde_qs = "0.12.0"
totp-rs = { version = "5.1.0", features = ["qr", "gen_secret"] }
tracing = "0.1.37"
