[package]
name = "common"
version = "0.1.0"
authors = ["kmiura <ken.miura1102@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fred-session = "0.1.5"
aws-config = "0.57.1"
aws-sdk-s3 = "0.35.0"
aws-sdk-sesv2 = "0.35.0"
axum = { version = "0.6.20", features = ["macros"] }
axum-extra = { version = "0.8.0", features = ["cookie", "cookie-signed"] }
bcrypt = "0.15.0"
chrono = "0.4.31"
entity = { path = "../entity" }
once_cell = "1.18.0"
opensearch = "2.2.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_qs = "0.12.0"
tokio = { version = "1.34.0", features = ["full"] }
totp-rs = { version = "5.4.0", features = ["qr", "gen_secret"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
