[package]
name = "delete_expired_deleted_user_accounts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
common = { path = "../common" }
dotenv = "0.15.0"
entity = { path = "../entity" }
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.40"
