[package]
name = "entity"
version = "0.1.0"
authors = ["kmiura <ken.miura1102@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }

[dependencies.sea-orm]
version = "0.11.0"
features = [
  "macros",
  "debug-print",
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-chrono",
]
default-features = false
