[package]
name = "service"
version = "0.1.0"
authors = ["kmiura <ken.miura1102@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
actix-web = { version = "3.3.2", features = ["openssl"] }
openssl = "0.10.34"
actix-files = "0.5.0"
actix-http = "2.2.0"
serde = "1.0.123"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.9"
dotenv = "0.15.0"
actix-redis = "0.9.1"
actix-session = "0.4.0"
time = "0.2.26"
regex = "1.4.5"
log = "0.4.14"
log4rs = "1.0.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = "0.4.19"
lettre = "0.9"
lettre_email = "0.9"
once_cell = "1.7.2"
derive_more = "0.99.13"
bcrypt = "0.9.0"
actix-multipart = "0.3.0"
futures = "0.3.14"
serde_json = "1.0"
# rusotoを0.43.0より上のバージョンに上げる際は、他のライブラリ (actix-web等) もtokio v1.0以上を利用することを確認する
rusoto_core = "0.43.0"
rusoto_s3 = "0.43.0"
