[package]
name = "user_service"
version = "0.1.0"
authors = ["kmiura <ken.miura1102@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fred-session = "0.1.5"
async-session = "3.0.0"
axum = { version = "0.7.1", features = ["json", "multipart"] }
axum-extra = { version = "0.9.0", features = ["cookie", "cookie-signed", "typed-header"] }
chrono = "0.4.31"
common = { path = "../common" }
dotenv = "0.15.0"
entity = { path = "../entity" }
hyper = { version = "1.0.1", features = ["full"] }
image = "0.24.7"
jsonwebtoken = "9.1.0"
num_cpus = "1.16.0"
once_cell = "1.18.0"
opensearch = "2.2.0"
regex = "1.10.2"
rust_decimal = "1.33.1"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
